--- a/roles/configfiles/templates/newui.conf.j2
+++ b/roles/configfiles/templates/newui.conf.j2
@@ -103,7 +103,7 @@ SSO_ADMIN_SECRET={{ sso_pw }}
 #  - LDAP Direct Binding configuration properties         #
 #  - LDAP Indirect Binding configuration properties       #
 
-INSERT_IDP_CONFIG_BLOCK_HERE (SAML, LDAP direct, or LDAP indirect)
+# INSERT_IDP_CONFIG_BLOCK_HERE (SAML, LDAP direct, or LDAP indirect)
 # Type of LDAP profile; in this case, "indirect"
 SSO_LDAP_PROFILE=indirect
 
